[package]
name = "abc213"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

[dependencies]
procon_reader = { git = "https://github.com/ia7ck/rust-competitive-programming" }
binary_search = { git = "https://github.com/ia7ck/rust-competitive-programming" }
grid_search = { git = "https://github.com/ia7ck/rust-competitive-programming" }
z_algorithm = { git = "https://github.com/ia7ck/rust-competitive-programming" }
