[package]
name = "abc215"
version = "0.1.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

[dependencies]
procon_reader = { git = "https://github.com/ia7ck/rust-competitive-programming" }
next_permutation = { git = "https://github.com/ia7ck/rust-competitive-programming" }
join = { git = "https://github.com/ia7ck/rust-competitive-programming" }
least_prime_factors = { git = "https://github.com/ia7ck/rust-competitive-programming" }
