[package]
name = "abc232"
version = "0.0.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

[dependencies]
input_i_scanner = { git = "https://github.com/ia7ck/rust-competitive-programming" }
next_permutation = { git = "https://github.com/ia7ck/rust-competitive-programming" }
mod_int = { git = "https://github.com/ia7ck/rust-competitive-programming" }
