[package]
name = "abc254"
version = "0.0.0"
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
join = { git = "https://github.com/ia7ck/rust-competitive-programming" }
binary_search_range = { git = "https://github.com/ia7ck/rust-competitive-programming" }
prime_factorization = { git = "https://github.com/ia7ck/rust-competitive-programming" }
