[package]
name = "abc300"
version = "0.0.0"
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6" }
union_find = { git = "https://github.com/ia7ck/rust-competitive-programming" }
least_prime_factors = { git = "https://github.com/ia7ck/rust-competitive-programming" }
mod_int = { git = "https://github.com/ia7ck/rust-competitive-programming" }
