[package]
name = "abc302"
version = "0.0.0"
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
next_permutation = { git = "https://github.com/ia7ck/rust-competitive-programming" }
binary_search_range = { git = "https://github.com/ia7ck/rust-competitive-programming" }
