[package]
name = "abc363"
version = "0.0.0"
edition = "2021"

[dependencies]
proconio = { version = "=0.4.5" }
itertools = { version = "0.11.0" }
memoise = { version = "0.3.2" }
next_permutation = { git = "https://github.com/ia7ck/rust-competitive-programming", rev = "9c9fc50" }
grid_search = { git = "https://github.com/ia7ck/rust-competitive-programming", rev = "9c9fc50" }
