[package]
name = "abc384"
version = "0.0.0"
edition = "2021"

[dependencies]
# https://img.atcoder.jp/file/language-update/language-list.html
proconio = { version = "=0.4.5" }
ac-library-rs = { version = "=0.1.1" }
# memoise = { version = "0.3.2" }
# rand = { version = "0.8.5", features = ["small_rng"] } # https://rust-random.github.io/book/guide-rngs.html
# itertools = { version = "0.11.0" }

grid_search = { git = "https://github.com/ia7ck/rust-competitive-programming", rev = "5ad057b" }
zarts = { git = "https://github.com/ia7ck/rust-competitive-programming", rev = "5ad057b" }
# fenwick_tree = { git = "https://github.com/ia7ck/rust-competitive-programming", rev = "5ad057b" }
