[package]
name = "arc167"
version = "0.0.0"
edition = "2021"

[dependencies]
proconio = { version = "=0.4.5" }
prime_factorization= { git = "https://github.com/ia7ck/rust-competitive-programming" }
mod_int = { git = "https://github.com/ia7ck/rust-competitive-programming" }
floor_sqrt = { git = "https://github.com/ia7ck/rust-competitive-programming" }
