[package]
name = "code-jam-2022-round-1a"
version = "0.0.0"
edition = "2018"

[dependencies]
scanner = { git = "https://github.com/ia7ck/rust-competitive-programming" }
scanner_proc_macro = { git = "https://github.com/ia7ck/rust-competitive-programming" }
join = { git = "https://github.com/ia7ck/rust-competitive-programming" }
next_permutation = { git = "https://github.com/ia7ck/rust-competitive-programming" }
