[package]
name = "day3"
version = "0.0.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2018"

[dependencies]
input_i_scanner = { git = "https://github.com/ia7ck/rust-competitive-programming" }
prime_factorization = { git = "https://github.com/ia7ck/rust-competitive-programming" }
ext_gcd = { git = "https://github.com/ia7ck/rust-competitive-programming" }
